crates/wac-parser/tests/resolution/fail/export-conflict-type.wac
import f with "x": func();

record x {
    a: u32
}

export f with "x";
